Fixes css in chapter tree, and adds contrast to the workarea view.

--- a/client/modules/core/components/tree/tree.scss
+++ b/client/modules/core/components/tree/tree.scss
@@ -23,6 +23,7 @@ $expand-collapse-icon-color: #666;
 $plus-minus-color: $white;
 
 .tree {
+  background-color: transparent;
   li.node.root ul {
     list-style: none;
     margin: 0;
@@ -45,8 +46,7 @@ $plus-minus-color: $white;
       height: 0;
       left: -14px;
       top: 13px;
-      width: 20px;
-      z-index: -10;
+      width: 15px;
     }
 
     // Draw the vertical lines
@@ -55,19 +55,54 @@ $plus-minus-color: $white;
       border-left: 1px solid $tree-line-color;
       height: 100%;
       left: -14px;
-      top: -25px;
+      top: -27px;
       width: 0;
-      z-index: -10;
+    }
+
+    > li > ul > li:first-of-type::after {
+      border-left: 1px solid $tree-line-color;
+      height: 100%;
+      left: -14px;
+      top: -15px;
+      width: 0;
+    }
+
+    > li > ul > li:first-of-type:last-child::after {
+      border-left: 1px solid $tree-line-color;
+      height: calc(100% - 11px);
+      left: -14px;
+      top: -15px;
+      width: 0;
     }
 
     li:last-child::after {
+      border-left: 1px solid $tree-line-color;
       height: 100%;
+      left: -14px;
+      top: -27px;
+      width: 0;
     }
 
     .node {
       margin: 0;
       padding: 0;
     }
+  }
+
+  li.node.root > ul:first-of-type > li::after {
+    border-left: 1px solid $tree-line-color;
+    height: 100%;
+    left: -14px;
+    top: 0;
+    width: 0;
+  }
+
+  li.node.root > ul > li > ul::after, li.node.root > ul > li::after {
+    border-left: 1px solid $tree-line-color;
+    height: 100%;
+    left: -14px;
+    top: -14px;
+    width: 0;
   }
 
   li.node.root > ul:first-of-type > li::before {
@@ -145,8 +180,7 @@ span.drop-target.active {
     height: 0;
     left: -15px;
     top: 13px;
-    width: 20px;
-    z-index: -10;
+    width: 15px;
   }
 
   // Draw the vertical lines
@@ -156,7 +190,10 @@ span.drop-target.active {
     left: -16px;
     top: -12px;
     width: 0;
-    z-index: -10;
+  }
+
+  &:first-child::after {
+    top: -8px;
   }
 
   &::after {
